--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,9 @@ jobs:
         uses: anothrNick/github-tag-action@1.55.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          DEFAULT_BRANCH: 'main'
+          DEFAULT_BRANCH: main
+          RELEASE_BRANCHES: main
+          INITIAL_VERSION: 1.0.0
           WITH_V: true
 
       - name: Build Release
